--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="./Projects/calculator.html"
+              href="."
               aria-label="live preview"
               class="link link--icon"
               target="_blank"
