--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
           <div class="project">
             <h3>Portfolio Website</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              This is Portfolio Website Created With Html Css and Java Script Portfolio Websites Are Great 
+              Way To showcase your work and let others know about yourself. They Can Be Very Creative 
+              and Can Provide a Insight About Your Work
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Html</li>
@@ -127,9 +127,9 @@
           <div class="project">
             <h3>JavaScript-Calculator</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              This is a Simple Calculator Designed in Html Css And Javascript it performs Basic Operations 
+              such as Addition Subtraction Division And Multiplication with help of javascript which adds 
+              functionality to it
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Html</li>
