--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
           <li class="skills__list-item btn btn--plain">JavaScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
           <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
           <li class="skills__list-item btn btn--plain">Git</li>
           <li class="skills__list-item btn btn--plain">CI/CD</li>
         </ul>
