--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
         <h1>Hi, I am <span class="about__name">Sohitveer Singh.</span></h1>
         <h2 class="about__role">A Front end Developer.</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          Focused on Front end Development Building Front end of Web Sites With HTML CSS and JavaScript and 
+          Frameworks Such As JQuery and Bootstrap I am Also Passionate about Learning new Things and Exploring Cutting 
+          Edge Technology For Improving  My SKills
         </p>
 
         <div class="about__contact center">
@@ -190,10 +188,10 @@
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">HTML</li>
           <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
+          <li class="skills__list-item btn btn--plain">jQuery</li>
           <li class="skills__list-item btn btn--plain">JavaScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">UI/UX</li>
           <li class="skills__list-item btn btn--plain">Python</li>
           <li class="skills__list-item btn btn--plain">Git</li>
           <li class="skills__list-item btn btn--plain">CI/CD</li>
